force-app/main/default/objects/Order/fields/EstimatedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDeliveryDate__c</fullName>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>