force-app/main/default/objects/Order/fields/TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>TrackingNumber__c</fullName>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>